--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
 			<h3 class="mdc-typography--headline3">Ordinal</h3>
 
 			<label class="mdc-text-field mdc-text-field--outlined">
-			  <input type="text" class="mdc-text-field__input" aria-labelledby="game-label-id">
+			  <input id="game_id" type="text" class="mdc-text-field__input" aria-labelledby="game-label-id">
 			  <div class="mdc-notched-outline">
 			    <div class="mdc-notched-outline__leading"></div>
 			    <div class="mdc-notched-outline__notch">
@@ -48,7 +48,7 @@
 			</label>
 
 			<label class="mdc-text-field mdc-text-field--outlined">
-			  <input type="text" class="mdc-text-field__input" aria-labelledby="name-label-id">
+			  <input id="name_id" type="text" class="mdc-text-field__input" aria-labelledby="name-label-id">
 			  <div class="mdc-notched-outline">
 			    <div class="mdc-notched-outline__leading"></div>
 			    <div class="mdc-notched-outline__notch">
@@ -58,12 +58,12 @@
 			  </div>
 			</label>
 
-			<button class="mdc-button mdc-button--outlined">
+			<button id="joinButton" class="mdc-button mdc-button--outlined">
 			  <div class="mdc-button__ripple"></div>
 			  <span class="mdc-button__label">Join Game</span>
 			</button>
 
-			<button class="mdc-button mdc-button--outlined">
+			<button id="startButton" class="mdc-button mdc-button--outlined">
 			  <div class="mdc-button__ripple"></div>
 			  <span class="mdc-button__label">Start a New Game</span>
 			</button>
@@ -83,15 +83,33 @@
 
 	<script type="text/javascript">
 		const server = 'https://i1.fractionofadot.org/ordinal/server/index.py';
-
-		fetch(server)
-		  .then((response) => {
-		    return response.json();
-		  })
-		  .then((data) => {
-		    console.log(data);
-		  }).catch((error) => {
-		  	console.log(error);
-		  });
+		let startButton = document.getElementById('startButton')
+		let joinButton = document.getElementById('joinButton') 
+		let gameId = document.getElementById('game_id')
+		let nameId = document.getElementById('name_id')
+		startButton.addEventListener('click', (e) => {
+			fetch(server + "?action=new")
+		  	.then((response) => {
+		    		return response.json();
+		  	})
+		  	.then((data) => {
+		    		console.log(data);
+		  	}).catch((error) => {
+		  		console.log(error);
+		  	});
+		});
+		joinButton.addEventListener('click', (e) => {
+			req = server + "?action=join&name=" + nameId.value + "&game_id=" + gameId.value;
+			fetch(req)
+		  	.then((response) => {
+		    		return response.json();
+		  	})
+		  	.then((data) => {
+		    		console.log(data);
+		  	}).catch((error) => {
+				console.log(req);
+		  		console.log(error);
+		  	});
+		});
 	</script>
 </html>
