--- a/client/index.html
+++ b/client/index.html
@@ -117,24 +117,8 @@
 		let joinButton = document.getElementById('joinButton') 
 		let gameId = document.getElementById('game_id')
 		let nameId = document.getElementById('name_id')
-
-		var post_req = {
-		    method: 'POST', // *GET, POST, PUT, DELETE, etc.
-		    mode: 'cors', // no-cors, *cors, same-origin
-		    cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
-		    credentials: 'same-origin', // include, *same-origin, omit
-		    headers: {
-		      'Content-Type': 'application/json'
-		      // 'Content-Type': 'application/x-www-form-urlencoded',
-		    },
-		    redirect: 'follow', // manual, *follow, error
-		    referrerPolicy: 'no-referrer', // no-referrer, *client
-		    body: {} // body data type must match "Content-Type" header
-		  }
-
 		startButton.addEventListener('click', (e) => {
-			post_req.body = {"action" : "new", "name" : nameId.value, "players" : select.value}
-			fetch(server, post_req) //+ "?action=new&name=" + nameId.value + "&players=" + select.value
+			fetch(server + "?action=new&name=" + nameId.value + "&players=" + select.value)
 		  	.then((response) => {
 		    		return response.json();
 		  	})
@@ -144,7 +128,6 @@
 		  		console.log(error);
 		  	});
 		});
-
 		joinButton.addEventListener('click', (e) => {
 			req = server + "?action=join&name=" + nameId.value + "&game_id=" + gameId.value;
 			fetch(req)
@@ -157,8 +140,5 @@
 		  		console.log(error);
 		  	});
 		});
-	</script>
-	<script type="text/javascript">
-		
 	</script>
 </html>
