--- a/client/index.html
+++ b/client/index.html
@@ -30,35 +30,23 @@
     			display: block;
     			margin: 16px auto;
     		}
+
+    		.ord-players {
+    			margin: 16px auto;
+    			border: 1px solid rgba(0,0,0,0.5);
+    			border-radius: 4px;
+    			padding: 16px;
+    			width: 216px;
+    		}
+
+    		.ord-players-label {
+    			margin-bottom: 8px;
+    		}
     	</style>
 	</head>
 	<body>
 		<div id="tm-login-page">
 			<h3 class="mdc-typography--headline3">Ordinal</h3>
-
-			<div id="players" class="mdc-select">
-			  <div class="mdc-select__anchor demo-width-class">
-			    <i class="mdc-select__dropdown-icon"></i>
-			    <div class="mdc-select__selected-text"></div>
-			    <span class="mdc-floating-label">Number of Players</span>
-			    <div class="mdc-line-ripple"></div>
-			  </div>
-
-			  <div class="mdc-select__menu mdc-menu mdc-menu-surface demo-width-class">
-			    <ul class="mdc-list">
-			      <li class="mdc-list-item mdc-list-item--selected" data-value="" aria-selected="true"></li>
-			      <li class="mdc-list-item" data-value="2">
-			        2
-			      </li>
-			      <li class="mdc-list-item" data-value="3">
-			        3
-			      </li>
-			      <li class="mdc-list-item" data-value="4">
-			        4
-			      </li>
-			    </ul>
-			  </div>
-			</div>
 
 			<label class="mdc-text-field mdc-text-field--outlined">
 			  <input id="game_id" type="text" class="mdc-text-field__input" aria-labelledby="game-label-id">
@@ -82,6 +70,43 @@
 			  </div>
 			</label>
 
+			<div class="ord-players">
+				<div class="mdc-typography--body1 ord-players-label">Players</div>
+				<div class="mdc-form-field">
+				  <div class="mdc-radio">
+				    <input class="mdc-radio__native-control" type="radio" id="radio-2" name="players" value="2" checked>
+				    <div class="mdc-radio__background">
+				      <div class="mdc-radio__outer-circle"></div>
+				      <div class="mdc-radio__inner-circle"></div>
+				    </div>
+				    <div class="mdc-radio__ripple"></div>
+				  </div>
+				  <label for="radio-2">2</label>
+				</div>
+				<div class="mdc-form-field">
+				  <div class="mdc-radio">
+				    <input class="mdc-radio__native-control" type="radio" id="radio-3" name="players" value="3">
+				    <div class="mdc-radio__background">
+				      <div class="mdc-radio__outer-circle"></div>
+				      <div class="mdc-radio__inner-circle"></div>
+				    </div>
+				    <div class="mdc-radio__ripple"></div>
+				  </div>
+				  <label for="radio-3">3</label>
+				</div>
+				<div class="mdc-form-field">
+				  <div class="mdc-radio">
+				    <input class="mdc-radio__native-control" type="radio" id="radio-4" name="players" value="4">
+				    <div class="mdc-radio__background">
+				      <div class="mdc-radio__outer-circle"></div>
+				      <div class="mdc-radio__inner-circle"></div>
+				    </div>
+				    <div class="mdc-radio__ripple"></div>
+				  </div>
+				  <label for="radio-4">4</label>
+				</div>
+			</div>
+
 			<button id="joinButton" class="mdc-button mdc-button--outlined">
 			  <div class="mdc-button__ripple"></div>
 			  <span class="mdc-button__label">Join Game</span>
@@ -104,11 +129,19 @@
 		  return new mdc.ripple.MDCRipple(el);
 		});
 
-		const select = new mdc.select.MDCSelect(document.querySelector('.mdc-select'));
-
-		select.listen('MDCSelect:change', () => {
-		  // alert(`Selected option at index ${select.selectedIndex} with value "${select.value}"`);
+		const radios = [].map.call( document.querySelectorAll('.mdc-radio'), function(el) {
+			return new mdc.radio.MDCRadio(el);
 		});
+
+		const formFields = [].map.call( document.querySelectorAll('.mdc-form-field'), function(el) {
+			return new mdc.formField.MDCFormField(el);
+		});
+
+		for (var i = radios.length - 1; i >= 0; i--) {
+			formFields[i].input = radios[i]
+		}
+		
+
 	</script>
 
 	<script type="text/javascript">
@@ -117,8 +150,11 @@
 		let joinButton = document.getElementById('joinButton') 
 		let gameId = document.getElementById('game_id')
 		let nameId = document.getElementById('name_id')
+
 		startButton.addEventListener('click', (e) => {
-			fetch(server + "?action=new&name=" + nameId.value + "&players=" + select.value)
+			players = document.querySelector('input[name = "players"]:checked').value;
+
+			fetch(server + "?action=new&name=" + nameId.value + "&players=" + players)
 		  	.then((response) => {
 		    		return response.json();
 		  	})
@@ -128,6 +164,7 @@
 		  		console.log(error);
 		  	});
 		});
+
 		joinButton.addEventListener('click', (e) => {
 			req = server + "?action=join&name=" + nameId.value + "&game_id=" + gameId.value;
 			fetch(req)
