--- a/client/index.html
+++ b/client/index.html
@@ -172,15 +172,21 @@
 		startButton.addEventListener('click', (event) => {
 			players = document.querySelector('input[name = "players"]:checked').value;
 
-			fetch(server + "?action=new&name=" + nameId.value + "&players=" + players)
-		  	.then((response) => {
-		    		return response.json();
-		  	})
-		  	.then((data) => {
-                                displayGameInfo(data);
-		  	}).catch((error) => {
-		  		console.log(error);
-		  	});
+			postData(server, { answer: 42 })
+			  .then((data) => {
+
+			    console.log("posted!",  data); // JSON data parsed by `response.json()` call
+			  });
+
+			// fetch(server + "?action=new&name=" + nameId.value + "&players=" + players)
+		 //  	.then((response) => {
+			// 	return response.json();
+		 //  	})
+		 //  	.then((data) => {
+			// 	displayGameInfo(data);
+		 //  	}).catch((error) => {
+		 //  		console.log(error);
+		 //  	});
 
 		  	
 		});
@@ -206,6 +212,7 @@
 			let gid = gameObj.game_id;
 			console.log(gid, pid)
 
+
 				req = server + "?action=playcard&player_id=" + pid + "&game_id=" + gid + "state_id=" + gameObj.state_id;
 				fetch(req)
 			  	.then((response) => {
@@ -218,6 +225,27 @@
 			  		console.log(error);
 			  	});
 		};
+
+		
+		async function postData(url = '', data = {}) {
+		  // Default options are marked with *
+		  const response = await fetch(url, {
+		    method: 'POST', // *GET, POST, PUT, DELETE, etc.
+		    mode: 'no-cors', // no-cors, *cors, same-origin
+		    cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
+		    credentials: 'same-origin', // include, *same-origin, omit
+		    headers: {
+		      'Content-Type': 'application/json'
+		      // 'Content-Type': 'application/x-www-form-urlencoded',
+		    },
+		    redirect: 'follow', // manual, *follow, error
+		    referrerPolicy: 'no-referrer', // no-referrer, *client
+		    body: JSON.stringify(data) // body data type must match "Content-Type" header
+		  });
+		  return response.json(); // parses JSON response into native JavaScript objects
+		}
+
+
 
 		function displayGameInfo(serverData) {
 			let gamePage = document.getElementById("ord-game-page");
