--- a/client/index.html
+++ b/client/index.html
@@ -232,8 +232,8 @@
 		  const response = await fetch(url, {
 		    method: 'POST', // *GET, POST, PUT, DELETE, etc.
 		    headers: {
-		      'Content-Type': 'application/json'
-		      // 'Content-Type': 'application/x-www-form-urlencoded',
+		      //'Content-Type': 'application/json'
+		      'Content-Type': 'application/x-www-form-urlencoded',
 		    },
 		    body: JSON.stringify(data) // body data type must match "Content-Type" header
 		  });
