--- a/client/index.html
+++ b/client/index.html
@@ -162,6 +162,7 @@
 
 	<script type="text/javascript">
 		const server = 'https://i1.fractionofadot.org/ordinal/server/index.py';
+		// const server = 'https://ptsv2.com/t/yx4hk-1586877318/post'
 		let startButton = document.getElementById('startButton');
 		let joinButton = document.getElementById('joinButton') ;
 		let playCardButton = document.getElementById("playCardButton");
@@ -172,21 +173,21 @@
 		startButton.addEventListener('click', (event) => {
 			players = document.querySelector('input[name = "players"]:checked').value;
 
-			postData(server, { action: "new" })
-			  .then((data) => {
+			// postData(server, { "action": "new" })
+			//   .then((data) => {
 
-			    console.log("posted!",  data); // JSON data parsed by `response.json()` call
-			  });
+			//     console.log("posted!",  data); // JSON data parsed by `response.json()` call
+			//   });
 
-			// fetch(server + "?action=new&name=" + nameId.value + "&players=" + players)
-		 //  	.then((response) => {
-			// 	return response.json();
-		 //  	})
-		 //  	.then((data) => {
-			// 	displayGameInfo(data);
-		 //  	}).catch((error) => {
-		 //  		console.log(error);
-		 //  	});
+			fetch(server + "?action=new&name=" + nameId.value + "&players=" + players)
+		  	.then((response) => {
+				return response.json();
+		  	})
+		  	.then((data) => {
+				displayGameInfo(data);
+		  	}).catch((error) => {
+		  		console.log(error);
+		  	});
 
 		  	
 		});
@@ -232,8 +233,8 @@
 		  const response = await fetch(url, {
 		    method: 'POST', // *GET, POST, PUT, DELETE, etc.
 		    headers: {
-		      //'Content-Type': 'application/json'
-		      'Content-Type': 'application/x-www-form-urlencoded',
+		      'Content-Type': 'application/json'
+		      // 'Content-Type': 'application/x-www-form-urlencoded',
 		    },
 		    body: JSON.stringify(data) // body data type must match "Content-Type" header
 		  });
